--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.39.1",
+		"@sveltejs/adapter-cloudflare": "^7.2.4",
 		"@sveltejs/adapter-node": "^5.4.0",
+		"@sveltejs/adapter-static": "^3.0.10",
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/forms": "^0.5.10",
@@ -37,8 +39,8 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
-  	"nanoid": "^5.1.6",
-  	"svedit": "^0.6.0",
+		"nanoid": "^5.1.6",
+		"svedit": "^0.6.0",
 		"valibot": "^1.2.0"
 	}
 }
