--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
+		"@mdx-js/rollup": "^3.1.1",
+		"@types/mdx": "^2.0.13",
 		"nanoid": "^5.1.6",
 		"svedit": "^0.6.0",
 		"valibot": "^1.2.0"
